# rust-messagebox-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  openapi.json
.github/workflows/: ci.yml
migrations/: 20260412120000_initial_schema.sql  20260413190000_tiered_messagebox_pricing.sql  20260413200000_remove_peerpay_fees.sql  20260413210000_zero_default_fees.sql  20260717000000_baseline_schema.sql  20260717010000_device_registrations.sql
src/: backplane.rs  bench_metrics.rs  cloneable_wallet.rs  config.rs  docs.rs  lib.rs  logger.rs  main.rs  metrics.rs  ops.rs  persist.rs  test_support.rs  ws.rs
src/db/: mod.rs  queries.rs  tests.rs
src/firebase/: mod.rs  send_fcm_notification.rs
src/handlers/: acknowledge_message.rs  devices.rs  helpers.rs  list_messages.rs  mod.rs  permissions.rs  request_types.rs  response_types.rs  send_message.rs  tests.rs
tests/: backplane_e2e.rs  ops_e2e.rs  ws_failure_events_e2e.rs
