[package]
name = "messagebox-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "macros", "migrate"] }
tower-http = { version = "0.6", features = ["cors", "timeout", "limit"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
hex = "0.4"
base64 = "0.22"
thiserror = "2"
parking_lot = "0.12"
signal-hook = "0.3"
form_urlencoded = "1"
async-trait = "0.1"
socketioxide = { version = "0.15", features = ["state"] }

# BRC-31 auth middleware — crates.io release
bsv-auth-axum-middleware = "0.1"

# bsv-sdk — sole SDK for all auth and wallet operations. The concurrency-safe
# Arc<Peer> build (Type-42 ECDH shared-secret cache) is published as 0.2.87 on
# crates.io, so no patch is needed. bsv-auth-axum-middleware and bsv-wallet-toolbox
# both depend on bsv-sdk ^0.2, so all three resolve a single crates.io 0.2.87 copy.
bsv-sdk = { version = "0.2.87", features = ["network"] }

# Bumped to 0.2.24 (latest 0.2.x). Older 0.2.16 predates the SDK's
# CertificateResult.keyring change (bare HashMap -> Option<HashMap>) and fails to
# compile against 0.2.86+. 0.2.24 targets the newer shape and requires bsv-sdk
# "0.2" (satisfied by crates.io 0.2.87).
bsv-wallet-toolbox = "0.2.24"

getrandom = "0.4"
http-body-util = "0.1"
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = { version = "0.10", features = ["pem"] }
sha2 = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mysql"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true

# Standalone package — not a member of the parent rust-mpc workspace.
# Without this, cargo walks up to rust-mpc/Cargo.toml and refuses to build.
[workspace]

# bsv-auth-axum-middleware 0.1.2 is not yet on crates.io, so it is sourced from
# git. This server is the build root, so its [patch] applies graph-wide. The
# middleware carries the lock-free Arc<Peer> verify/create, the cert-exchange
# empty-certifiers fix, and SessionNotFound -> 401; it requires bsv-sdk "0.2.87",
# which resolves from crates.io (no bsv-sdk patch needed) so every crate shares
# one bsv-sdk copy. Pinned to an immutable rev (not a branch) so a force-push
# can't silently change this payment-adjacent build; bump the rev when it moves,
# and drop this [patch] entirely once 0.1.2 publishes to crates.io.
[patch.crates-io]
bsv-auth-axum-middleware = { git = "https://github.com/b1narydt/bsv-auth-axum-middleware", rev = "a12649f8d5f03e8756497274e3136362df04e8b7" }
