[package]
name = "messagebox-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "macros", "migrate"] }
tower-http = { version = "0.6", features = ["cors", "timeout", "limit"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
hex = "0.4"
base64 = "0.22"
thiserror = "2"
parking_lot = "0.12"
signal-hook = "0.3"
form_urlencoded = "1"
async-trait = "0.1"
socketioxide = { version = "0.15", features = ["state"] }

# Shared BRC-103-over-Socket.IO subsystem (per-socket Peer sessions, verified
# identity, rooms, signed emits/broadcasts). Extracted from this server's
# hand-rolled ws.rs glue; see src/ws.rs for what stays app-side.
authsocket = { version = "0.1.0", features = ["server"] }

# BRC-103/104 auth middleware — git dep (0.1.3, WS-first connect + connect-ack
# gate), same rev as rust-mpc bins/backend + bins/cosigner. Requires bsv-sdk 0.3.
bsv-auth-axum-middleware = { git = "https://github.com/b1narydt/bsv-auth-axum-middleware", rev = "18a39db0f0ef1042e7eca8cf4c602f0be9ecf0a2" }

# bsv-sdk — sole SDK for all auth and wallet operations. Declared as a registry
# version and redirected graph-wide to the shared 0.3 git rev via
# [patch.crates-io] below, so this crate, authsocket, the middleware, and
# bsv-wallet-toolbox all resolve ONE bsv-sdk copy (WalletInterface/AuthMessage
# unify across the auth boundary). Verify with `cargo tree -i bsv-sdk`.
bsv-sdk = { version = "0.3", features = ["network"] }

# 0.3.x — the line that targets bsv-sdk 0.3 (matches the rust-mpc workspace).
bsv-wallet-toolbox = "0.3"

getrandom = "0.4"
http-body-util = "0.1"
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = { version = "0.10", features = ["pem"] }
sha2 = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mysql"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true

# Standalone package — not a member of the parent rust-mpc workspace.
# Without this, cargo walks up to rust-mpc/Cargo.toml and refuses to build.
[workspace]

# bsv-sdk pinned graph-wide to the same 0.3 git rev as rust-mpc, rust-authsocket,
# and rust-messagebox-client (crates.io 0.3.0 rejects protocol/basket names
# starting with 'p', which breaks the payment-request-auth protocol; the pinned
# rev reserves the "p " namespace instead). This server is the build root, so the
# [patch] applies graph-wide: every crate (incl. bsv-wallet-toolbox and the auth
# middleware) shares one bsv-sdk copy. Pinned to an immutable rev, not a branch.
[patch.crates-io]
bsv-sdk = { git = "https://github.com/b1narydt/bsv-rust-sdk.git", rev = "102abf703289ea8459167c4b2954e5cd94fce8d5" }
